Grammar correction & new page
– Added a new page for new case study
– Corrected grammar mistakes

--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -59,7 +59,7 @@
 
             <div>
                 <li>Design a messaging feature that enables parents to communicate with other parents in the app.</li>
-                <li>Discover what privacy concerns parents have and design the app accordingly so t hat it is safe to
+                <li>Discover what privacy concerns parents have and design the app accordingly so that it is safe to
                     use.
                 </li>
             </div>
@@ -109,7 +109,7 @@
         All of the participants were not very concerned about their privacy since their daycare is small. However, I can
         see some parents will be concerned about their privacy, so I decided to have the options for parents to hide
         their information in the app. Other than that, the majority of parents seemed that they want to get to know
-        other children and preants.
+        other children and parents.
 
         <br><br>
 
@@ -141,7 +141,7 @@
         Through my research, I was able to learn a lot about the users, so I decided to summarize and make it into one
         persona to remember throughout the process. It was really important for me to carefully check the interview
         summary because I'm not a mom, so it was a little bit hard to emphasize and understand them.
-        <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Anna Taylor">
+        <img class="mirror-content2" src="Brightwheel/Persona.jpg" alt="Persona, Anna Taylor">
 
 
         <p>User Flow</p>
@@ -153,7 +153,7 @@
         That way, I can understand how I can make it so that users will be able to complete a task without any
         frustrations.
 
-        <img class="mirror-content2" src="matcha-img/User flow.jpg" alt="User Flow">
+        <img class="mirror-content2" src="Brightwheel/User flow.jpg" alt="User Flow">
 
 
     </div>
@@ -177,11 +177,11 @@
         about them.
 
         <a href=#img-wireframes class="lightbox-link">
-            <img class="mirror-content2" src="matcha-img/Wireflows.png" alt="Mirror, low-fi wireframes">
+            <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
         </a>
 
         <a href="#!" class="lightbox" id="img-wireframes">
-            <span style="background-image: url('matcha-img/Wireflows.png')"></span>
+            <span style="background-image: url('matcha-img/Wireflows.jpg')"></span>
         </a>
         I had a lot of different pieces of information at first that made the main page look cluttered.
         I realized that the main page was losing the focus of what it was telling the users.
@@ -200,9 +200,11 @@
         looked text-heavy.
         At first, I tried to leave all the text since I thought it's important for the users to know what matcha is. I
         was able to make is simpler at the end, and it looks eye-catching visually compared to the first iteration.
-        <img class="mirror-content2" src="matcha-img/hi-fi iterations.jpg" alt="hi-fi UI main page iteration">
+        <img class="mirror-content2" src="Brightwheel/Sending a request.jpg" alt="hi-fi UI sending a message request flow">
 
-        <img class="mirror-content2" src="matcha-img/hi-fi frames.jpg" alt="hi-fi UI">
+        <img class="mirror-content2" src="Brightwheel/Privacy setting.jpg" alt="hi-fi UI privacy settings">
+
+        <img class="mirror-content2" src="Brightwheel/Approving a request.jpg" alt="hi-fi UI approving a message request flow">
     </div>
 
 
@@ -223,7 +225,7 @@
 
         <p>Prototype and Usability Test</p>
         <a class="link"
-            href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
+            href="https://www.figma.com/proto/kC1vyScK9X1n2jBAD8PLZA/Brightwheel-Hi-fi-design?page-id=0%3A1&node-id=27%3A96&viewport=241%2C48%2C0.3&scaling=scale-down&starting-point-node-id=27%3A96&show-proto-sidebar=1"
             target="_blank">View Prototype</a><br><br>
         I conducted usability tests to identify any frustrations/confusion users might have during each interaction, and
         if it inhibits users from performing certain tasks.
@@ -243,7 +245,7 @@
         I mainly got feedback about the tea ceremony classes and booking process, so I re-iterated on it.
         I searched for a lot of inspiration so that my design can deliver a better user experience.
 
-        <img class="mirror-content2" src="matcha-img/Affinity Map.jpg" alt="Affinity Map">
+        <img class="mirror-content2" src="Brightwheel/Affinity map.jpg" alt="Affinity Map">
 
 
         <p>Priority Revision</p>
@@ -258,7 +260,7 @@
         <div>
 
             <div class="mirror-content">I made the 'shop' text more visible than other text in the navigation bar.</div>
-            <img class="mirror-content2" src="matcha-img/Priority revision nav bar.jpg"
+            <img class="mirror-content2" src="Brightwheel/Priority revision profile.jpg"
                 alt="Revisions I made based on the user test, nav bar">
         </div>
 
@@ -269,7 +271,7 @@
                 I used icons to differentiate group and private classes. The text is simple and short, yet it has all
                 the
                 information about the classes that are different from each other.</div>
-            <img class="mirror-content2" src="matcha-img/Priority revision class.jpg"
+            <img class="mirror-content2" src="Brightwheel/Priority revision settings.jpg"
                 alt="Revisions I made based on the user test, class overview page">
         </div>
 
@@ -280,7 +282,7 @@
                 For the starter kit, I included a photo of the starter kit so the users can visualize what they are
                 ordering.
             </div>
-            <img class="mirror-content2" src="matcha-img/Priority revision checkout.jpg"
+            <img class="mirror-content2" src="Brightwheel/Priority revision message.jpg"
                 alt="Revisions I made based on the user test, check out">
         </div>
 
