--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -70,7 +70,7 @@
 
             <div>
                 <li>Design a hi-fidelity, responsive e-commerce website with virtual tea ceremony class bookings.</li>
-                <li>Design a logo and establish brand identify for the website.</li>
+                <li>Design a logo and establish brand identity for the website.</li>
             </div>
 
             <div class="objectives">
@@ -86,7 +86,7 @@
             </div>
 
             <p>Challenges</p>
-            <li>Majority of people have no idea what to bring to Japanese Tea Ceremony, or what it's all about.</li>
+            <li>The majority of people have no idea what to bring to a Japanese Tea Ceremony, or what it's all about.</li>
             <li>Japanese Tea Ceremony sounds too intimidating and has strict manners.</li>
 
 
@@ -140,10 +140,10 @@
         seek out Japanese Tea Ceremony as a cultural experience when they were in Japan or if they had the chance.
         However, a few participants (those who have lived in Japan before) said they would like to learn about and
         get better at it.
-        I decided to target those who would seek it out when they get the chance, since they represent the majority
+        I decided to target those who would seek it out when given the chance, since they represent the majority
         of potential users in the US.<br><br>
 
-        Here are the major needs/pain points I got from the user interviews.
+        Here are the major needs/pain points I got from the user interviews:
 
         <img class="mirror-content2" src="matcha-img/interview summary.jpg" alt="Interview summary">
 
@@ -169,7 +169,7 @@
 
         <p>Persona</p>
 
-        To empathize with the users and remember what their needs are, I created a persona that
+        To empathize with the users and remember their needs, I created a persona that
         represents a core user. At first, I was thinking that my target users are people who appreciate
         attending Japanese Tea Ceremony and drinking matcha as it is. However, I learned through my research
         that liking matcha doesn’t mean they would attend a class to get better at making matcha, but to learn
@@ -182,10 +182,9 @@
 
         After defining my persona, I created a user flow to visualize the paths that users would take to book a
         tea ceremony class.
-        I was able to empathize with the users and also define what I should include and emphasize on the
+        I was able to empathize with the users and define what to include and emphasize on the
         website.
-        That way, I can understand how I can make it so that users will be able to complete a task without any
-        frustrations.
+        With this understanding, I can design the website with specific user tasks in mind.
 
         <img class="mirror-content2" src="matcha-img/User flow.jpg" alt="User Flow">
 
@@ -202,13 +201,22 @@
 
     <div class="content mirror-body">
 
+        <p>Sketches</p>
+        I started by sketching ideas of what I wanted to include. I made sure to include all the important
+        information about matcha and Japanese Tea ceremony. From my research, I learned that
+        people tend to associate matcha with only desserts or drinks, so I included other information that users
+        can read to learn about other aspects of matcha.
+        I also focused on having two things on the website: matcha e-commerce and booking online Japanese Tea Ceremony
+        classes, since this is what the business does.
+
+
+        <img class="mirror-content2" src="matcha-img/Sketches.jpg" alt="Sketches three versions">
+
         <p>Mid-Fidelity Wireframes</p>
-        I started making low-fidelity wireframes with a lot of ideas of what I wanted to include. I
-        focused on having two things on the website: matcha e-commerce and booking online Japanese Tea Ceremony
-        classes, since this is what the business does. I learned through my research that people don’t always
-        associate matcha as a drink, and they don’t know much about Japanese Tea Ceremony. I
-        wanted to also include information about matcha and Japanese Tea Ceremony so that the users can learn
-        about them.
+        I started to work on wireframes based on the sketches, but I realized the website is overloaded with too much
+        information about matcha. I wanted to put everything on one page, but the website became confusing.
+        I removed the unnecessary elements from the main page, to make sure that users don't get lost.
+
 
         <a href=#img-wireframes class="lightbox-link">
             <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
@@ -217,14 +225,14 @@
         <a href="#!" class="lightbox" id="img-wireframes">
             <span style="background-image: url('matcha-img/Wireflows.jpg')"></span>
         </a>
-        I had a lot of different pieces of information at first that made the main page look cluttered.
-        I realized that the main page was losing the focus of what it was telling the users.
+        I still had a lot of different pieces of information at first that made the main page look cluttered.
+        I realized that the main page was losing its focus of what it was telling the users.
         I iterated on this several times and was able to streamline it.
 
         <img class="mirror-content2" src="matcha-img/Wireframes main.jpg" alt="Wireframes main page 3 iterations">
         I first had two containers for private and group pages.
-        However, I realized those two are almost the same except price and a few other information, so I combined them
-        into just one section.
+        However, I realized those two are almost the same except for the price and a few other things, so I combined them
+        into one section.
         <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg"
             alt="Wireframes class overview page 2 iterations">
 
@@ -235,10 +243,10 @@
         looked text-heavy.
         At first, I tried to leave all the text since I thought it's important for the users to know what matcha is, but
         I realized people wouldn't care and just skip the reading part if they are not interested. At the end, I made
-        the text much shorter and gave the users options to read more if they are interested.
+        the text much shorter and gave the users the option to read more if they are interested.
         I also tried hard not to make the website look too sophisticated since Japanese Tea Ceremony itself is already
-        too sophisticated to scare people away sometimes. To achieve that, I used friendly and soft colors rather than
-        black, which a lot of matcha businesses do. Yet the images leave the hint of sophistication which shows the
+        sophisticated enough to sometimes scare people away. To achieve this, I used soft and friendly colors rather than
+        black, which a lot of matcha businesses do. Still, the images leave the hint of sophistication which shows the
         beauty of Japanese Tea Ceremony.
 
 
@@ -267,10 +275,9 @@
             href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
             target="_blank">View Prototype</a><br><br>
         I conducted usability tests to identify any frustrations/confusion users might have during each interaction, and
-        if it inhibits users from performing certain tasks.
-        I recruited 3 individuals aged 24-28 who like matcha for the zoom usability test. I also conducted a usability
-        test using Maze, which I
-        tested with 10 individuals.
+        whether it inhibits users from performing certain tasks.
+        I recruited 3 individuals aged 24-28 who like matcha for the Zoom usability test. I also conducted a usability
+        test using Maze, which I tested with 10 individuals.
 
 
 
@@ -289,24 +296,22 @@
 
         <p>Priority Revision</p>
         After analyzing what is making users frustrated or confused, I made revisions based on the
-        solutions/improvements on affinity map.
+        solutions/improvements on the affinity map.
         <br>
 
 
         <div>
 
-            <div class="mirror-content">I made the 'shop' text more visible than other text in the navigation bar.</div>
+            <div class="mirror-content">I made the 'shop' text more visible than the other text in the navigation bar.</div>
             <img class="mirror-content2" src="matcha-img/Priority revision nav bar.jpg"
                 alt="Revisions I made based on the user test, nav bar">
         </div>
 
         <div>
-            <div class="mirror-content">I removed the description text and included 'What is matcha?' text so that
-                whoever
-                is interested can click and read more.
-                I used icons to differentiate group and private classes. The text is simple and short, yet it has all
-                the
-                information about the classes that are different from each other.</div>
+            <div class="mirror-content">I removed the description text and included 'What is Japanese Tea Ceremony?' text so that
+                whoever is interested can click and read more.
+                I added icons to differentiate group and private classes. The text is simple and short, yet it has all
+                the information about the classes that are different from each other.</div>
             <img class="mirror-content2" src="matcha-img/Priority revision class.jpg"
                 alt="Revisions I made based on the user test, class overview page">
         </div>
@@ -314,7 +319,7 @@
         <div>
 
             <div class="mirror-content">
-                I made a container for the booking summary and removed unnecessary text for more simplicity.
+                I made a container for the booking summary and removed unnecessary text for simplicity. 
                 For the starter kit, I included a photo of the starter kit so the users can visualize what they are
                 ordering.
             </div>
@@ -335,10 +340,9 @@
     </div>
 
     <div class="content mirror-body">
-        <li>Assumptions could be correct or very wrong–it's important to make sure wether it's correct or not through
-            research.</li>
-        <li>Having visuals, such as icons and images, make a big difference when the users navigate through the website.
-            It also helps the users expect what they are without reading the text.</li>
+        <li>Assumptions could be correct or very wrong–it's important to verify them with research.</li>
+        <li>Having visuals, such as icons and images, make a big difference in helping users navigate the website.
+            Icons and images also help the users expect what things mean without reading the text.</li>
         <li>Having a lot of information doesn't always mean it's helping the users–it could result in making the users
             confused.</li>
     </div>
