--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -42,7 +42,7 @@
         <div class="matcha-hero">
             <div>
                 <h1>Brightwheel <br>– Add a feature</h1>
-                <h3>Helping moms to get to know other parent at the same daycare.</h3>
+                <h3>Helping parents get to know other parents at the same daycare.</h3>
             </div>
 
 
@@ -60,7 +60,7 @@
         <div class="mirror-body">
             Brightwheel is a childcare management service that offers useful features to both owners and parents.
             Brightwheel provides an app that the school staff can use to share photos, videos, and daily activities with
-            the authorized parents, as well as to communicate with them.
+            the authorized parents, as well as communicate with them.
         </div>
 
         <div class="mirror-body">
@@ -86,10 +86,9 @@
             </div>
 
             <p>Challenges</p>
-            <li>Not all parents are open to share their and their child's information. How might we provide everyone
+            <li>Not all parents are open to share their own or their child's information. How might we provide everyone
                 options to show/hide their information? </li>
-            <li>Parents have a hard time getting to know other parents in-person. It's also hard to know who is who's
-                parents.</li>
+            <li>Parents have a hard time getting to know other parents in-person. It's also hard to know which children belong to which parents.</li>
 
 
         </div>
@@ -108,23 +107,22 @@
 
     <div class="content mirror-body">
         I decided to conduct only user interviews since I couldn’t check other competitors (I had to be a parent or
-        staff to
-        be able to use other similar apps). I was initially planning on conducting a survey, but I ended up not doing it
+        staff to be able to use similar apps). I was initially planning on conducting a survey, but I ended up not doing it
         since all the questions I had were better to ask in user interviews for qualitative data. Also, the problems I
         was trying to solve needed to have more quality answers rather than quantity answers.
 
         <p>1:1 User Interviews</p>
-        For user interviews, I learned a lot of concerns and needs of parents through user interviews.
+        Through user interviews, I was able to learn the concerns and needs of the parents.
         All of the participants were not very concerned about their privacy since their daycare is small. However, I can
-        see some parents will be concerned about their privacy, and some participants showed concerns about privacy when
-        it comes to large-scale (eg. bigger schools)
-        For that reason, I decided to have the options for parents to hide their information in the app. Other than
-        that, the majority of participants seemed that they want to get to know
+        see some parents being concerned about their privacy, and some participants showed concerns about privacy when
+        it comes to a larger scale (e.g. large schools).
+        For that reason, I decided give parents the option to hide their information in the app. Other than
+        that, the majority of participants seemed to want to get to know
         other children and parents.
 
         <br><br>
 
-        Here are the summary of major needs/pain points I got from the user interviews.
+        Here is the summary of the major needs/pain points I got from the user interviews.
 
         <img class="mirror-content2" src="Brightwheel/Interview summary.jpg" alt="Interview summary">
 
@@ -149,10 +147,9 @@
 
 
         <p>Persona</p>
-        Through my research, I was able to learn a lot about the users, so I decided to summarize and make it into one
+        Through my research, I was able to learn a lot about the users, so I decided to summarize my findings into one
         persona to remember throughout the process. It was really important for me to carefully read through the
-        interview
-        summary because I'm not a mom, so it wasn't easy to emphasize with someone I'm not familiar with.
+        interview summary as I'm not a mom, and therefore cannot easily empathize with moms.
         By creating a persona, I was able to remember who I was designing this feature for and what I need to focus on.
 
         <div>
@@ -170,11 +167,9 @@
 
         <p>User Flow</p>
         I decided to make a user flow to imagine how the user will think and take actions to complete a task.
-        Even though Brightwheel is an existing app, and I use it everyday at the daycare I work for, the daycare staff
-        and parents have different app interfaces.
-        To understand the users (parents-side) better, I watched some Youtube videos to learn how the interface work
-        differently first.
-        Then, I referred back to my research to make sure that I'm not missing important elements that I should include.
+        Even though Brightwheel is an app I use every day, I only see the daycare staff interface; parents see a different view.
+        To understand the users (the parents) better, I first watched some YouTube videos to learn how the interface works.
+        Then, I referred back to my research to make sure that I'm not missing important elements.
 
         <div>
 
@@ -203,10 +198,9 @@
 
         <p>Sketches</p>
 
-        Before creating wireframes, I decided to sketch out my ideas since they are all around my head and I had to
-        organize them.
+        Before creating wireframes, I decided to sketch out different ideas and organize my thoughts.
         I first went to the app and took a lot of screenshots of the design I will need to use in this project.
-        Then, I started to putting all the new features together with the existing design in the sketches.
+        Then, I started putting all the new features together with the existing design in the sketches.
 
         <div>
 
@@ -224,16 +218,12 @@
 
 
         <p>Mid-Fidelity Wireframes</p>
-        I made wireframes before moving on to hi-fidelity design so that I can focus on the flows of the whole app.
-        I made this based on the sketches and screenshots from the Brightwheel app. I wanted to differentiate the
-        parts that are from the screenshots and skecthes for new features, so I made the existing design in colors and
-        new designs in grey scale.
-        What was hard in this process was that there are basically two people in one app: the child and parent. It took
-        some time to
-        come up how a
-        user can differentiate which settings a user is trying to edit. I focused on where to place the link for privacy
-        settings since it's very important for the users, I wanted to place it where the users are able to locate it
-        easily. I also took a lot of time figuring out how to differentiate settings for a child and a parent.
+        I made wireframes before moving on to hi-fidelity design so that I can focus on the flows for the whole app.
+        I made this based on the sketches and screenshots from the Brightwheel app. In order to differentiate the
+        screenshots and new feature skecthes, I kept the existing design in color and made new designs in grayscale.
+        The difficult part of this process was the fact that there exist essentially two people in one app: the child
+        and parent. It took me some time to come up with a system to differentiate which settings a user is trying to edit.
+        I also focused on putting the privacy settings link somewhere easy to find since it's so important for users.
 
 
 
@@ -265,14 +255,13 @@
 
 
         <p>Hi-Fidelity Responsive Design</p>
-        Once I was donw with the wireframes, I moved on to hi-fidelity designs to make sure the overall hierarchy of the
-        design with colors and matcha with the original design.
-        I made three flows for the parent-parent messaging feature: sending a request flow, editing privacy
-        setting flow, and checking a message request flow.
+        Once I finished the wireframes, I started working on hi-fidelity designs.
+        While designing, I paid special attention to match the colors and paradigms in the original design.
+        I made three flows for the parent-parent messaging feature: sending a message request, editing privacy
+        settings, and checking a message request.
         I didn't make major changes from the wireframes since I mainly followed the design of the original app. The
-        only
-        thing that was entirely new design to the app is the checking a message request. I looked for a lot of
-        inspirations of how I should make the message request obvious in a way that doesn't bother the original
+        only design that is entirely new to the app is the checking a message request. I did research to find
+        inspiration for how I could make the message request obvious in a way that doesn't disrupt the original
         design.
         <br><br>
 
@@ -333,37 +322,26 @@
 
     <div class="content mirror-body">
 
-
         <p>Prototype and Usability Test</p>
         <a class="link"
             href="https://www.figma.com/proto/kC1vyScK9X1n2jBAD8PLZA/Brightwheel-Hi-fi-design?page-id=0%3A1&node-id=27%3A96&viewport=241%2C48%2C0.3&scaling=scale-down&starting-point-node-id=27%3A96&show-proto-sidebar=1"
             target="_blank">View Prototype</a><br><br>
         I conducted usability tests to identify frustrations as well as privacy concerns that I should be more
-        careful
-        about.
-        I recruited 3 participants who have a child who currently go to daycare for Zoom the usability test and 10
-        participants (preferably parents) to do Maze usability test.
-
-
-
-
-
-
-
-
+        careful about. I used two formats:
+        <ul>
+            <li>Zoom (3 participants who have a child currently attending daycare)</li>
+            <li>Maze (10 participants, preferably parents)</li>
+        </ul>
 
         <p>Affinity Map</p>
-        After the usability testings, I summarized the findings so that I can revise the parts of the design that
-        made
-        the users frustrated/confused.
-        I did not get major privacy concerns regarding the app and its interface, I received other comments
-        concerning
-        other features, such as locking the app.
-        Since this is such a sensitive topic, I think there could be more things that could be iterated and
+        After the usability testing, I summarized the findings so that I can revise the parts of the design that
+        made the users frustrated/confused.
+        I did not get major privacy concerns regarding the app and its interface; rather I received comments
+        concerning other features, such as locking the app.
+        Since this is such a sensitive topic, I think there could be more things that could be iterated on and
         considered.
 
         <div>
-
             <a href=#img-affinity-map class="lightbox-link">
                 <img class="mirror-content2" src="Brightwheel/Affinity map.jpg" alt="Affinity map">
             </a>
@@ -371,46 +349,33 @@
             <a href="#!" class="lightbox" id="img-affinity-map">
                 <span style="background-image: url('Brightwheel/Affinity\ map.jpg')"></span>
             </a>
-
         </div>
-
 
         <p>Priority Revision</p>
         Since my main focus is to add a new feature, I wanted to keep the original design as much as possible and
-        not to
-        add designs that stand out from the original design.
+        not add a design that stands out from the original.
         <br>
 
-
         <div>
-
             <div class="mirror-content">
                 I included the "what is a message request?" text so that if anyone gets confused by it, they can
-                read
-                about it. Some participants mentioned that they can expect what it is, but they're still not sure
-                what
-                it does.
+                read about it. Some participants mentioned that they can expect what it is, but they're still not sure
+                what it does.
             </div>
-
-
             <div>
-
                 <a href=#img-revision-profile class="lightbox-link">
                     <img class="mirror-content2" src="Brightwheel/Priority revision profile.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
-
                 <a href="#!" class="lightbox" id="img-revision-profile">
                     <span style="background-image: url('Brightwheel/Priority\ revision\ profile.jpg')"></span>
                 </a>
-
             </div>
         </div>
 
         <div>
             <div class="mirror-content">
-                I keep the children's icons who are tagged in this photo open so that it's more obvious to everyone.
-                I included a "hide" text for anyone who don't like it to be shown.
+                I kept the tagged children panel shown by default to make it more prominent, while still including a "hide" button.
             </div>
 
             <div>
@@ -429,10 +394,10 @@
 
         <div>
             <div class="mirror-content">
-                Some participants had a hard time finding "display name" since it doesn't get displayed until they
-                unselect "name" toggle.
-                I included text to inform them how to set a display name when they don't want to share their real
-                names.
+                Some participants had a hard time finding "display name" since it isn't shown until they
+                deactivate the "name" toggle.
+                I added some help text to inform users how to set a display name when they don't want to share their real
+                name.
             </div>
 
             <div>
@@ -452,20 +417,14 @@
         <div>
 
             <div class="mirror-content">
-                I wasn’t sure how I can make the topic more obvious so that users would know they have to choose a
+                At first I wasn’t sure how to make the topic more obvious so that users would know they have to choose a
                 topic. I referred back to
-                the original design and realized it looks more obvious–they use the purple for text and they have
-                other
-                text in
-                more subtle colors and they also have less text. I decided to change the color and remove the
-                “Topic” so
-                that it
-                looks cleaner, and it works better capturing eyes from other things and make the text more
-                prominent.
-                I also made the drop down icon bigger.<br><br>
-                A few participants mentioned that they didn't know who will receive the request, so I included a
-                text
-                about who will receive it.
+                the original design and discovered that it uses purple for certain text and more subtle colors for other text; it also has fewer words.
+                I decided to change the color and remove the word “Topic” to make it
+                both look cleaner and more prominent;
+                I also made the drop down icon larger.<br><br>
+                A few participants mentioned that they didn't know who will receive the request, so I included some explanatory
+                text.
             </div>
 
             <div>
@@ -487,7 +446,7 @@
 
 
 
-    <div class="stage2">
+    <div class="stage3">
 
         <div class="content mirror-body">
             <h1 class="stage-text">Takeaways</h1>
@@ -495,12 +454,10 @@
     </div>
 
     <div class="content mirror-body">
-        <li>It's not easy to empathize with the people you are not familiar with–research is a strong method and
-            helps
-            you a lot to empathize and understand those people you are not familiar with.</li>
-        <li>Don't assume people would understand what you understand–even a small things makes people confused and
-            frustrated, having explanation is helpful.</li>
-        <li>Technology (like Brightwheel) is a great way to solve a lot of probelms, yet they create problems at the
+        <li>It's not easy to empathize with people you are not familiar with–research is an effective means to empathize with and understand those people.</li>
+        <li>Don't assume people will understand something you understand–even small things can make people confused and
+            frustrated; having explanations is helpful.</li>
+        <li>Technology (such as Brightwheel) is a great way to solve problems, yet it can create problems at the
             same time. </li>
     </div>
 
