--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
             <div class="imgs">
-                <a href="Mirror.html">
+                <a href="all-about-matcha.html">
                     <div class="work-rectangle">
                         <div class="work-rectangle-content">
                             <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -88,7 +88,7 @@
                     <div class="work-text">Mirror – Clothing e-commerce website</div>
                 </a>
                 
-                <a href="all-about-matcha.html">
+                <a href="Brightwheel.html">
                     <div class="work-rectangle">
                         <div class="work-rectangle-content">
                             <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
