Matcha Image update
– Made all the image expandable

--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -86,7 +86,8 @@
             </div>
 
             <p>Challenges</p>
-            <li>The majority of people have no idea what to bring to a Japanese Tea Ceremony, or what it's all about.</li>
+            <li>The majority of people have no idea what to bring to a Japanese Tea Ceremony, or what it's all about.
+            </li>
             <li>Japanese Tea Ceremony sounds too intimidating and has strict manners.</li>
 
 
@@ -115,8 +116,15 @@
         I also picked competitors who do tea ceremony lessons either online or in-person to see how they set up their
         booking process.
 
+        <div>
+            <a href=#img-competitive class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Competitive analysis.jpg" alt="Competitive analysis">
+            </a>
 
-        <img class="mirror-content2" src="matcha-img/Competitive Analysis.jpg" alt="Competitive Analysis">
+            <a href="#!" class="lightbox" id="img-competitive">
+                <span style="background-image: url('matcha-img/Competitive\ analysis.jpg')"></span>
+            </a>
+        </div>
 
 
 
@@ -131,8 +139,15 @@
         a sophisticated atmosphere, so I wanted to get quantitative results from the survey.
         My assumption was fairly correct, while a few people said that it would be a relaxing and peaceful experience.
 
+        <div>
+            <a href=#img-survey class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Survey.jpg" alt="Survey summary">
+            </a>
 
-        <img class="mirror-content2" src="matcha-img/Survey.jpg" alt="Survey 2 charts">
+            <a href="#!" class="lightbox" id="img-survey">
+                <span style="background-image: url('matcha-img/Survey.jpg')"></span>
+            </a>
+        </div>
 
 
         <p>1:1 User Interviews</p>
@@ -145,7 +160,16 @@
 
         Here are the major needs/pain points I got from the user interviews:
 
-        <img class="mirror-content2" src="matcha-img/interview summary.jpg" alt="Interview summary">
+
+        <div>
+            <a href=#img-interview class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Interview summary.jpg" alt="Interview summary">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-interview">
+                <span style="background-image: url('matcha-img/Interview\ summary.jpg')"></span>
+            </a>
+        </div>
 
 
 
@@ -175,7 +199,16 @@
         that liking matcha doesn’t mean they would attend a class to get better at making matcha, but to learn
         about a
         new culture and new things.
-        <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
+
+        <div>
+            <a href=#img-persona class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-persona">
+                <span style="background-image: url('matcha-img/Persona.jpg')"></span>
+            </a>
+        </div>
 
 
         <p>User Flow</p>
@@ -186,8 +219,16 @@
         website.
         With this understanding, I can design the website with specific user tasks in mind.
 
-        <img class="mirror-content2" src="matcha-img/User flow.jpg" alt="User Flow">
 
+        <div>
+            <a href=#img-user-flow class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/User flow.jpg" alt="User flow">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-user-flow">
+                <span style="background-image: url('matcha-img/User\ flow.jpg')"></span>
+            </a>
+        </div>
 
     </div>
 
@@ -210,31 +251,63 @@
         classes, since this is what the business does.
 
 
-        <img class="mirror-content2" src="matcha-img/Sketches.jpg" alt="Sketches three versions">
+
+        <div>
+            <a href=#img-sketches class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Sketches.jpg" alt="Sketches three versions">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-sketches">
+                <span style="background-image: url('matcha-img/Sketches.jpg')"></span>
+            </a>
+        </div>
 
         <p>Mid-Fidelity Wireframes</p>
         I started to work on wireframes based on the sketches, but I realized the website is overloaded with too much
         information about matcha. I wanted to put everything on one page, but the website became confusing.
         I removed the unnecessary elements from the main page, to make sure that users don't get lost.
 
+        <div>
+            <a href=#img-wireframes class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
+            </a>
 
-        <a href=#img-wireframes class="lightbox-link">
-            <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
-        </a>
+            <a href="#!" class="lightbox" id="img-wireframes">
+                <span style="background-image: url('matcha-img/Wireflows.jpg')"></span>
+            </a>
+        </div>
 
-        <a href="#!" class="lightbox" id="img-wireframes">
-            <span style="background-image: url('matcha-img/Wireflows.jpg')"></span>
-        </a>
+
         I still had a lot of different pieces of information at first that made the main page look cluttered.
         I realized that the main page was losing its focus of what it was telling the users.
         I iterated on this several times and was able to streamline it.
 
-        <img class="mirror-content2" src="matcha-img/Wireframes main.jpg" alt="Wireframes main page 3 iterations">
+        <div>
+            <a href=#img-wireframe-main class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Wireframes main.jpg"
+                    alt="Wireframes main page 3 iterations">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-wireframe-main">
+                <span style="background-image: url('matcha-img/Wireframes\ main.jpg')"></span>
+            </a>
+        </div>
+
         I first had two containers for private and group pages.
-        However, I realized those two are almost the same except for the price and a few other things, so I combined them
+        However, I realized those two are almost the same except for the price and a few other things, so I combined
+        them
         into one section.
-        <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg"
-            alt="Wireframes class overview page 2 iterations">
+
+        <div>
+            <a href=#img-wireframe-class class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg"
+                    alt="Wireframes class overview page 2 iterations">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-wireframe-class">
+                <span style="background-image: url('matcha-img/Wireframes\ iteration\ class.jpg')"></span>
+            </a>
+        </div>
 
 
 
@@ -245,13 +318,33 @@
         I realized people wouldn't care and just skip the reading part if they are not interested. At the end, I made
         the text much shorter and gave the users the option to read more if they are interested.
         I also tried hard not to make the website look too sophisticated since Japanese Tea Ceremony itself is already
-        sophisticated enough to sometimes scare people away. To achieve this, I used soft and friendly colors rather than
+        sophisticated enough to sometimes scare people away. To achieve this, I used soft and friendly colors rather
+        than
         black, which a lot of matcha businesses do. Still, the images leave the hint of sophistication which shows the
         beauty of Japanese Tea Ceremony.
 
 
-        <img class="mirror-content2" src="matcha-img/Responsive homepage.jpg" alt="hi-fi responsive screens">
-        <img class="mirror-content2" src="matcha-img/Hi-fi other pages.jpg" alt="hi-fi other screens">
+
+        <div>
+            <a href=#img-home class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Responsive homepage.jpg" alt="Hi-fi responsive screens">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-home">
+                <span style="background-image: url('matcha-img/Responsive\ homepage.jpg')"></span>
+            </a>
+        </div>
+
+        <div>
+            <a href=#img-wireframe-others class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Hi-fi other pages.jpg" alt="Hi-fi other screens">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-wireframe-others">
+                <span style="background-image: url('matcha-img/Hi-fi\ other\ pages.jpg')"></span>
+            </a>
+        </div>
+
     </div>
 
 
@@ -291,7 +384,15 @@
         I mainly got feedback about the tea ceremony classes and booking process, so I re-iterated on it.
         I searched for a lot of inspiration so that my design can deliver a better user experience.
 
-        <img class="mirror-content2" src="matcha-img/Affinity Map.jpg" alt="Affinity Map">
+        <div>
+            <a href=#img-affinity class="lightbox-link">
+                <img class="mirror-content2" src="matcha-img/Affinity Map.jpg" alt="Affinity map">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-affinity">
+                <span style="background-image: url('matcha-img/Affinity\ Map.jpg')"></span>
+            </a>
+        </div>
 
 
         <p>Priority Revision</p>
@@ -303,28 +404,56 @@
         <div>
 
             <div class="mirror-content">I made the 'shop' text more visible than the other text in the navigation bar.</div>
-            <img class="mirror-content2" src="matcha-img/Priority revision nav bar.jpg"
-                alt="Revisions I made based on the user test, nav bar">
+
+            <div>
+                <a href=#img-revision-nav class="lightbox-link">
+                    <img class="mirror-content2" src="matcha-img/Priority revision nav bar.jpg"
+                        alt="Revisions I made based on the user test, nav bar">
+                </a>
+
+                <a href="#!" class="lightbox" id="img-revision-nav">
+                    <span style="background-image: url('matcha-img/Priority\ revision\ nav\ bar.jpg')"></span>
+                </a>
+            </div>
         </div>
 
         <div>
-            <div class="mirror-content">I removed the description text and included 'What is Japanese Tea Ceremony?' text so that
+            <div class="mirror-content">I removed the description text and included 'What is Japanese Tea Ceremony?'
+                text so that
                 whoever is interested can click and read more.
                 I added icons to differentiate group and private classes. The text is simple and short, yet it has all
                 the information about the classes that are different from each other.</div>
-            <img class="mirror-content2" src="matcha-img/Priority revision class.jpg"
-                alt="Revisions I made based on the user test, class overview page">
+
+            <div>
+                <a href=#img-revision-class class="lightbox-link">
+                    <img class="mirror-content2" src="matcha-img/Priority revision class.jpg"
+                        alt="Revisions I made based on the user test, class overview page">
+                </a>
+
+                <a href="#!" class="lightbox" id="img-revision-class">
+                    <span style="background-image: url('matcha-img/Priority\ revision\ class.jpg')"></span>
+                </a>
+            </div>
         </div>
 
         <div>
 
             <div class="mirror-content">
-                I made a container for the booking summary and removed unnecessary text for simplicity. 
+                I made a container for the booking summary and removed unnecessary text for simplicity.
                 For the starter kit, I included a photo of the starter kit so the users can visualize what they are
                 ordering.
             </div>
-            <img class="mirror-content2" src="matcha-img/Priority revision checkout.jpg"
-                alt="Revisions I made based on the user test, check out">
+
+            <div>
+                <a href=#img-revision-checkout class="lightbox-link">
+                    <img class="mirror-content2" src="matcha-img/Priority revision checkout.jpg"
+                        alt="Revisions I made based on the user test, check out">
+                </a>
+
+                <a href="#!" class="lightbox" id="img-revision-checkout">
+                    <span style="background-image: url('matcha-img/Priority\ revision\ checkout.jpg')"></span>
+                </a>
+            </div>
         </div>
 
 
