--- a/Windows to Japan.html
+++ b/Windows to Japan.html
@@ -6,7 +6,7 @@
 
 
 
-    <title>Brightwheel case study</title>
+    <title>Windows to Japan case study</title>
 </head>
 
 <body>
@@ -42,8 +42,8 @@
 
         <div class="matcha-hero">
             <div>
-                <h1>Brightwheel <br>– Add a feature</h1>
-                <h3>Helping parents get to know other parents at the same daycare.</h3>
+                <h1>Windows to Japan</h1>
+                <h3>Making travelers' experiences better and only one.</h3>
             </div>
 
 
@@ -57,7 +57,7 @@
     </div>
 
     <div class="content">
-        <p>What is Brightwheel?</p>
+        <p>What is Windows to Japan?</p>
         <div class="mirror-body">
             Brightwheel is a childcare management service that offers useful features to both owners and parents.
             Brightwheel provides an app that the school staff can use to share photos, videos, and daily activities with
@@ -76,7 +76,7 @@
 
             <div class="objectives">
                 <div>
-                    <p>Client:</p> Brightwheel
+                    <p>Client:</p> Windows to Japan
                 </div>
                 <div>
                     <p>Roles:</p> UX/UI designer & researcher
