--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
                 <a class="navlink" href="about.html">About</a>
                 <a class="navlink" href="work.html">Work</a>
+                <a class="navlink" href="">Resume</a>
                 <a class="navlink" href="contact.html">Contact</a>
             </div>
         </div>
@@ -46,7 +47,8 @@
                 </div>My name is Kotomi
                 Cogdill.
             </h1>
-            Billingual UX/UI designer based in the Bay Area.<br>
+            Billingual &#127471;&#127477;&#127482;&#127480;
+            UX/UI designer based in the SF Bay Area.<br>
 
             Creating visually aesthetic designs that bring users <br>
             happy experience is my new <a class="link" href="https://en.wikipedia.org/wiki/Ikigai">ikigai</a>.<br>
@@ -160,8 +162,9 @@
             </div>
 
         </div>
-    </div>
+        <footer> <small>&copy; Hand-crafted by Kotomi</small> </footer> 
 
+    </div>
 
 
 
