--- a/Mirror.html
+++ b/Mirror.html
@@ -31,6 +31,7 @@
 
                 <a class="navlink" href="about.html">About</a>
                 <a class="navlink" href="work.html">Work</a>
+                <a class="navlink" href="">Resume</a>
                 <a class="navlink" href="contact.html">Contact</a>
             </div>
         </div>
