--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -29,6 +29,7 @@
 
                 <a class="navlink" href="about.html">About</a>
                 <a class="navlink" href="work.html">Work</a>
+                <a class="navlink" href="">Resume</a>
                 <a class="navlink" href="contact.html">Contact</a>
             </div>
         </div>
