--- a/work.html
+++ b/work.html
@@ -30,6 +30,7 @@
 
                 <a class="navlink" href="about.html">About</a>
                 <a class="navlink" href="work.html">Work</a>
+                <a class="navlink" href="">Resume</a>
                 <a class="navlink" href="contact.html">Contact</a>
             </div>
         </div>
@@ -134,8 +135,10 @@
             </div>
 
         </div>
-    </div>
 
+        <footer> <small>&copy; Hand-crafted by Kotomi</small> </footer> 
+
+    </div>
 
 
 
